--- a/Writer/writer.ipynb
+++ b/Writer/writer.ipynb
@@ -170,10 +170,10 @@
     "outputs, states = tf.nn.dynamic_rnn(cell, X, dtype=tf.float32)\n",
     "\n",
     "# Final output layer\n",
-    "dense = tf.layers.dense(inputs=outputs, units=n_words, activation=None)\n",
+    "#dense = tf.layers.dense(inputs=outputs, units=n_words, activation=None)\n",
     "\n",
     "# Class probabilities\n",
-    "probs = tf.nn.softmax(dense)"
+    "#probs = tf.nn.softmax(dense)"
    ]
   },
   {
@@ -198,7 +198,10 @@
     "train = optimizer.minimize(loss)\n",
     "\n",
     "# Initializer\n",
-    "init = tf.global_variables_initializer()"
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "# Save model\n",
+    "saver = tf.train.Saver()"
    ]
   },
   {
@@ -217,26 +220,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.0045956825\n",
-      "10 0.03775016\n",
-      "20 0.042112395\n",
-      "30 0.022589331\n",
-      "40 0.018119223\n",
-      "50 0.013709886\n",
-      "60 0.009618984\n",
-      "70 0.010496552\n",
-      "80 0.007123581\n",
-      "90 0.01038665\n",
-      "100 0.00651928\n",
-      "110 0.0062417127\n",
-      "120 0.0053795455\n",
-      "130 0.0051027513\n",
-      "140 0.0033686475\n",
-      "150 0.0031024183\n",
-      "160 0.0044150236\n",
-      "170 0.0047595785\n",
-      "180 0.0031650236\n",
-      "190 0.0028660947\n"
+      "0 0.004818327\n",
+      "10 0.2683465\n",
+      "20 0.27807683\n",
+      "30 0.26325405\n",
+      "40 0.24272978\n",
+      "50 0.23682836\n",
+      "60 0.21883845\n",
+      "70 0.21479118\n",
+      "80 0.18828242\n",
+      "90 0.18007444\n",
+      "100 0.18945682\n",
+      "110 0.18911353\n",
+      "120 0.28000924\n",
+      "130 0.16535111\n",
+      "140 0.15931684\n",
+      "150 0.16522744\n",
+      "160 0.15099347\n",
+      "170 0.1486667\n",
+      "180 0.13406016\n",
+      "190 0.10219694\n"
      ]
     }
    ],
@@ -257,14 +260,99 @@
     "        \n",
     "        if iteration % 10 == 0:\n",
     "            loss_ = loss.eval(feed_dict={X: x_batch, Y: y_batch})\n",
-    "            print(iteration, loss_)"
+    "            print(iteration, loss_)\n",
+    "    \n",
+    "    saver.save(sess, \"./model\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test"
+    "# Generate new text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use this sentence to start the prediction: \"N years ago the marketing managers were expected researchers.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = ['N', 'years', 'ago', 'the', 'marketing', 'managers', 'were', 'expected', 'researchers', '<eos>']\n",
+    "sentence_ids = [word_to_id[word] for word in sentence]\n",
+    "seed = np.eye(n_words)[sentence_ids].reshape(1, time_steps, n_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 10, 745)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seed.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_generated_words = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./model\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "all the input arrays must have same number of dimensions",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-285d18dfe4ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mx_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mseed\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mtime_steps\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx_pred\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0mseed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseed\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/numpy/lib/function_base.py\u001b[0m in \u001b[0;36mappend\u001b[0;34m(arr, values, axis)\u001b[0m\n\u001b[1;32m   4526\u001b[0m         \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4527\u001b[0m         \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4528\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: all the input arrays must have same number of dimensions"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    \n",
+    "    saver.restore(sess, \"./model\")\n",
+    "    \n",
+    "    for iteration in range(n_generated_words):\n",
+    "        x_pred = seed[:, -time_steps:, :]\n",
+    "        y_pred = sess.run(outputs, feed_dict={X: x_pred})\n",
+    "        seed = np.append(seed, y_pred[:, -1, :], axis=1)"
    ]
   }
  ],
