--- a/Writer/writer.ipynb
+++ b/Writer/writer.ipynb
@@ -132,7 +132,6 @@
     "iterations = 200\n",
     "\n",
     "# learning rate\n",
-    "n_neurons = 5\n",
     "learning_rate = 0.1"
    ]
   },
@@ -162,18 +161,9 @@
    "source": [
     "# Define a gru cell\n",
     "cell = tf.nn.rnn_cell.GRUCell(n_words)\n",
-    "#cell = tf.contrib.rnn.OutputProjectionWrapper(\n",
-    "#    tf.contrib.rnn.BasicRNNCell(num_units=n_neurons, activation=tf.nn.relu),\n",
-    "#    output_size=n_words)\n",
     "\n",
     "# Get gru cell output\n",
-    "outputs, states = tf.nn.dynamic_rnn(cell, X, dtype=tf.float32)\n",
-    "\n",
-    "# Final output layer\n",
-    "#dense = tf.layers.dense(inputs=outputs, units=n_neurons, activation=None)\n",
-    "\n",
-    "# Class probabilities\n",
-    "#probs = tf.nn.softmax(dense)"
+    "outputs, states = tf.nn.dynamic_rnn(cell, X, dtype=tf.float32)"
    ]
   },
   {
@@ -190,7 +180,6 @@
    "outputs": [],
    "source": [
     "# Loss & optimizer\n",
-    "#loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(labels=Y, logits=outputs))\n",
     "loss = tf.reduce_mean(tf.square(outputs - Y))\n",
     "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
     "\n",
