--- a/Writer/writer.ipynb
+++ b/Writer/writer.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,33 +202,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.005015262\n",
-      "10 0.629171\n",
-      "20 0.2811913\n",
-      "30 0.10177969\n",
-      "40 0.030864079\n",
-      "50 0.03599846\n",
-      "60 0.022179691\n",
-      "70 0.015381064\n",
-      "80 0.015736751\n",
-      "90 0.011362393\n",
-      "100 0.008593122\n",
-      "110 0.0076812054\n",
-      "120 0.008076353\n",
-      "130 0.006264899\n",
-      "140 0.0063985097\n",
-      "150 0.005957357\n",
-      "160 0.005447595\n",
-      "170 0.0049146083\n",
-      "180 0.0049559963\n",
-      "190 0.0039138487\n"
+      "0 0.0046547707\n",
+      "10 0.036068976\n",
+      "20 0.2511616\n",
+      "30 0.24094781\n",
+      "40 0.15811719\n",
+      "50 0.075291894\n",
+      "60 0.0680719\n",
+      "70 0.036473114\n",
+      "80 0.04251855\n",
+      "90 0.105542675\n",
+      "100 0.035253294\n",
+      "110 0.03041741\n",
+      "120 0.09842419\n",
+      "130 0.016475076\n",
+      "140 0.01389665\n",
+      "150 0.009611361\n",
+      "160 0.009774543\n",
+      "170 0.09145613\n",
+      "180 0.09465058\n",
+      "190 0.011495933\n"
      ]
     }
    ],
@@ -270,14 +270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['fowl', 'ground.', 'life', 'but', 'fallen?', 'there', 'gold;', 'as', 'eyes,', 'abundantly']\n"
+      "['heaven', 'beginning', 'Woman,', 'way,', 'garden', 'waters.', 'breath', 'evil,', 'him.', 'eat:']\n"
      ]
     }
    ],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -330,14 +330,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['fowl', 'ground.', 'life', 'but', 'fallen?', 'there', 'gold;', 'as', 'eyes,', 'abundantly', 'the', 'lesser', 'after', 'them.', 'offering', 'said', '<eos>But', 'instead', 'offering', 'flesh:']\n"
+      "['heaven', 'beginning', 'Woman,', 'way,', 'garden', 'waters.', 'breath', 'evil,', 'him.', 'eat:', 'lights', 'kill', 'night;', 'earth', 'blessed', 'where', 'Earth;', 'kill', 'where', 'kill']\n"
      ]
     }
    ],
