remove commas and periods

--- a/Writer/writer.ipynb
+++ b/Writer/writer.ipynb
@@ -36,8 +36,7 @@
     "    tuple (raw_data, vocabulary)\n",
     "    \"\"\"\n",
     "  \n",
-    "    data = tf.gfile.GFile(data_path, \"r\").read().replace(\"\\n\", \"<eos>\").split()\n",
-    "    \n",
+    "    data = tf.gfile.GFile(data_path, \"r\").read().replace(\"\\n\", \"<eos> \").replace(\".\", \"\").replace(\",\", \"\").replace(\";\", \"\").split()    \n",
     "    counter = collections.Counter(data)\n",
     "    count_pairs = sorted(counter.items(), key=lambda x: (-x[1], x[0]))\n",
     "\n",
