correct model directory

--- a/Writer/writer.ipynb
+++ b/Writer/writer.ipynb
@@ -70,12 +70,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "643\n"
+      "2311\n"
      ]
     }
    ],
    "source": [
-    "raw_data_words, raw_data_ids, word_to_id, id_to_word = get_data(\"bible_100.txt\")\n",
+    "raw_data_words, raw_data_ids, word_to_id, id_to_word = get_data(\"bible_1000.txt\")\n",
     "n_words = len(word_to_id)\n",
     "print(n_words)"
    ]
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,6 +166,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Final output layer\n",
+    "dense = tf.layers.dense(inputs=outputs, units=n_words, activation=None)\n",
+    "\n",
+    "# Class probabilities\n",
+    "probs = tf.nn.softmax(dense)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -174,12 +187,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loss & optimizer\n",
-    "loss = tf.reduce_mean(tf.square(outputs - Y))\n",
+    "loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(labels=Y, logits=probs))\n",
+    "#loss = tf.reduce_mean(tf.square(outputs - Y))\n",
     "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
     "\n",
     "# Training\n",
@@ -201,33 +215,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.0046547707\n",
-      "10 0.036068976\n",
-      "20 0.2511616\n",
-      "30 0.24094781\n",
-      "40 0.15811719\n",
-      "50 0.075291894\n",
-      "60 0.0680719\n",
-      "70 0.036473114\n",
-      "80 0.04251855\n",
-      "90 0.105542675\n",
-      "100 0.035253294\n",
-      "110 0.03041741\n",
-      "120 0.09842419\n",
-      "130 0.016475076\n",
-      "140 0.01389665\n",
-      "150 0.009611361\n",
-      "160 0.009774543\n",
-      "170 0.09145613\n",
-      "180 0.09465058\n",
-      "190 0.011495933\n"
+      "0 7.7448254\n",
+      "10 7.7361803\n",
+      "20 7.7061806\n",
+      "30 7.7061806\n",
+      "40 7.7261806\n",
+      "50 7.7061806\n",
+      "60 7.7161803\n",
+      "70 7.6961803\n",
+      "80 7.7261806\n",
+      "90 7.7261806\n",
+      "100 7.6861806\n",
+      "110 7.7061806\n",
+      "120 7.6761804\n",
+      "130 7.7161803\n",
+      "140 7.7361803\n",
+      "150 7.7361803\n",
+      "160 7.7361803\n",
+      "170 7.7261806\n",
+      "180 7.7261806\n",
+      "190 7.6961803\n"
      ]
     }
    ],
@@ -250,7 +264,7 @@
     "            loss_ = loss.eval(feed_dict={X: x_batch, Y: y_batch})\n",
     "            print(iteration, loss_)\n",
     "    \n",
-    "    saver.save(sess, \"./model\")"
+    "    saver.save(sess, \"./model/\")"
    ]
   },
   {
@@ -269,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['heaven', 'beginning', 'Woman,', 'way,', 'garden', 'waters.', 'breath', 'evil,', 'him.', 'eat:']\n"
+      "['souls', 'Which', 'cast', 'among', 'torn', 'was', 'children:', 'Syrian', 'goats:', 'judge']\n"
      ]
     }
    ],
@@ -289,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +329,7 @@
     "seed = initial_seed.copy()\n",
     "with tf.Session() as sess:\n",
     "    \n",
-    "    saver.restore(sess, \"./model\")\n",
+    "    saver.restore(sess, \"./model/\")\n",
     "    \n",
     "    for iteration in range(pred_iterations):\n",
     "        print(iteration)\n",
@@ -329,14 +343,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['heaven', 'beginning', 'Woman,', 'way,', 'garden', 'waters.', 'breath', 'evil,', 'him.', 'eat:', 'lights', 'kill', 'night;', 'earth', 'blessed', 'where', 'Earth;', 'kill', 'where', 'kill']\n"
+      "['souls', 'Which', 'cast', 'among', 'torn', 'was', 'children:', 'Syrian', 'goats:', 'judge', 'unto', 'unto', 'unto', 'unto', 'unto', 'unto', 'unto', 'unto', 'unto', 'unto']\n"
      ]
     }
    ],
