notebook use characters instead of words

--- a/Writer/writer.ipynb
+++ b/Writer/writer.ipynb
@@ -36,16 +36,16 @@
     "    tuple (raw_data, vocabulary)\n",
     "    \"\"\"\n",
     "  \n",
-    "    data = tf.gfile.GFile(data_path, \"r\").read().replace(\"\\n\", \"<eos> \").replace(\".\", \"\").replace(\",\", \"\").replace(\";\", \"\").split()    \n",
+    "    data = list(tf.gfile.GFile(data_path, \"r\").read().replace(\"\\n\", \"\").lower())\n",
     "    counter = collections.Counter(data)\n",
     "    count_pairs = sorted(counter.items(), key=lambda x: (-x[1], x[0]))\n",
     "\n",
-    "    words, _ = list(zip(*count_pairs))\n",
-    "    word_to_id = dict(zip(words, range(len(words))))\n",
-    "    id_to_word = dict(zip(range(len(words)), words))\n",
+    "    chars, _ = list(zip(*count_pairs))\n",
+    "    char_to_id = dict(zip(chars, range(len(chars))))\n",
+    "    id_to_char = dict(zip(range(len(chars)), chars))\n",
     "\n",
-    "    data_in_ids = [word_to_id[word] for word in data if word in word_to_id]\n",
-    "    return data, data_in_ids, word_to_id, id_to_word"
+    "    data_in_ids = [char_to_id[char] for char in data]\n",
+    "    return data, data_in_ids, char_to_id, id_to_char"
    ]
   },
   {
@@ -55,10 +55,10 @@
    "outputs": [],
    "source": [
     "# converting a one-hot array into a word\n",
-    "def vec_to_word(vec, id_to_word):\n",
+    "def vec_to_char(vec, id_to_char):\n",
     "    index = np.argmax(vec, axis=0) # get the index of the most probable word\n",
-    "    word = id_to_word[index]\n",
-    "    return word"
+    "    char = id_to_char[index]\n",
+    "    return char"
    ]
   },
   {
@@ -70,14 +70,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2311\n"
+      "36\n"
      ]
     }
    ],
    "source": [
-    "raw_data_words, raw_data_ids, word_to_id, id_to_word = get_data(\"bible_1000.txt\")\n",
-    "n_words = len(word_to_id)\n",
-    "print(n_words)"
+    "raw_data_chars, raw_data_ids, char_to_id, id_to_char = get_data(\"bible_1000.txt\")\n",
+    "n_chars = len(char_to_id)\n",
+    "print(n_chars)"
    ]
   },
   {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,17 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Input size\n",
     "batch_size = 10\n",
-    "time_steps = 10\n",
+    "time_steps = 200\n",
     "#epochs = 1 # not considering epoch now\n",
     "\n",
     "# max number of iterations\n",
-    "iterations = 200\n",
+    "iterations = 500\n",
     "\n",
     "# learning rate\n",
     "learning_rate = 0.1"
@@ -143,23 +143,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Input / Output(target)\n",
-    "X = tf.placeholder(tf.float32, [None, time_steps, n_words])\n",
-    "Y = tf.placeholder(tf.float32, [None, time_steps, n_words])"
+    "X = tf.placeholder(tf.float32, [None, time_steps, n_chars])\n",
+    "Y = tf.placeholder(tf.float32, [None, time_steps, n_chars])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define a gru cell\n",
-    "cell = tf.nn.rnn_cell.GRUCell(n_words)\n",
+    "cell = tf.nn.rnn_cell.GRUCell(n_chars)\n",
     "\n",
     "# Get gru cell output\n",
     "outputs, states = tf.nn.dynamic_rnn(cell, X, dtype=tf.float32)"
@@ -167,12 +167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Final output layer\n",
-    "dense = tf.layers.dense(inputs=outputs, units=n_words, activation=None)\n",
+    "dense = tf.layers.dense(inputs=outputs, units=n_chars, activation=None)\n",
     "\n",
     "# Class probabilities\n",
     "probs = tf.nn.softmax(dense)"
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,33 +215,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 7.7448254\n",
-      "10 7.7361803\n",
-      "20 7.7061806\n",
-      "30 7.7061806\n",
-      "40 7.7261806\n",
-      "50 7.7061806\n",
-      "60 7.7161803\n",
-      "70 7.6961803\n",
-      "80 7.7261806\n",
-      "90 7.7261806\n",
-      "100 7.6861806\n",
-      "110 7.7061806\n",
-      "120 7.6761804\n",
-      "130 7.7161803\n",
-      "140 7.7361803\n",
-      "150 7.7361803\n",
-      "160 7.7361803\n",
-      "170 7.7261806\n",
-      "180 7.7261806\n",
-      "190 7.6961803\n"
+      "0 3.560939\n",
+      "10 3.4405751\n",
+      "20 3.4376385\n",
+      "30 3.437124\n",
+      "40 3.4356363\n",
+      "50 3.441349\n",
+      "60 3.438039\n",
+      "70 3.428631\n",
+      "80 3.4326198\n",
+      "90 3.4306483\n",
+      "100 3.4311433\n",
+      "110 3.4341393\n",
+      "120 3.4286096\n",
+      "130 3.4355512\n",
+      "140 3.4276896\n",
+      "150 3.4371119\n",
+      "160 3.4471247\n",
+      "170 3.4362147\n",
+      "180 3.4350996\n",
+      "190 3.4346445\n",
+      "200 3.4281209\n",
+      "210 3.439109\n",
+      "220 3.443139\n",
+      "230 3.4431329\n"
      ]
     }
    ],
@@ -256,7 +260,7 @@
     "            data=raw_data_ids,\n",
     "            batch_size=batch_size,\n",
     "            time_steps=time_steps,\n",
-    "            input_size=n_words)\n",
+    "            input_size=n_chars)\n",
     "        \n",
     "        sess.run(train, feed_dict={X: x_batch, Y: y_batch})\n",
     "        \n",
@@ -275,88 +279,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Use this sentence to start the prediction: \"N years ago the marketing managers were expected researchers.\""
+    "seed_chars, _, _, _ = get_data(\"bible_seed.txt\")\n",
+    "seed_chars = seed_chars[:time_steps]\n",
+    "seed_ids = [char_to_id[char] for char in seed_chars]\n",
+    "seed_sentence = \"\".join(seed_chars)\n",
+    "print(seed_sentence)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['souls', 'Which', 'cast', 'among', 'torn', 'was', 'children:', 'Syrian', 'goats:', 'judge']\n"
-     ]
-    }
-   ],
-   "source": [
-    "seed_ids = np.random.randint(0, n_words, 10)\n",
-    "seed_sentence = [id_to_word[id] for id in seed_ids]\n",
-    "print(seed_sentence)\n",
-    "initial_seed = np.eye(n_words)[seed_ids].reshape(1, time_steps, n_words)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from ./model\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pred_iterations = 10\n",
-    "seed = initial_seed.copy()\n",
+    "new_seed_ids = seed_ids.copy()\n",
     "with tf.Session() as sess:\n",
     "    \n",
     "    saver.restore(sess, \"./model/\")\n",
     "    \n",
     "    for iteration in range(pred_iterations):\n",
     "        print(iteration)\n",
-    "        x_pred = seed[:, -time_steps:, :]\n",
+    "        x_pred_ids = new_seed_ids[-time_steps:]\n",
+    "        x_pred = np.eye(n_chars)[x_pred_ids].reshape(1, time_steps, n_chars)\n",
     "        pred_probs = sess.run(outputs, feed_dict={X: x_pred})\n",
-    "        pred_last_index = np.argmax(pred_probs[:, -1:, :], axis=2)\n",
-    "        pred_last_word = id_to_word[pred_last_index[0][0]]\n",
-    "        seed_to_add = np.eye(n_words)[pred_last_index]\n",
-    "        seed = np.append(seed, seed_to_add, axis=1)"
+    "        pred_last_index = np.argmax(pred_probs[:, -1:, :], axis=2)[0][0]\n",
+    "        pred_last_char = id_to_char[pred_last_index]\n",
+    "        new_seed_ids = np.append(new_seed_ids, pred_last_index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['souls', 'Which', 'cast', 'among', 'torn', 'was', 'children:', 'Syrian', 'goats:', 'judge', 'unto', 'unto', 'unto', 'unto', 'unto', 'unto', 'unto', 'unto', 'unto', 'unto']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "final_sentence_ids = np.argmax(seed, axis=2)\n",
-    "final_sentence = [id_to_word[id] for id in final_sentence_ids[0]]\n",
+    "final_sentence = \"\".join([id_to_char[id] for id in new_seed_ids])\n",
     "print(final_sentence)"
    ]
   }
