--- a/Writer/writer.ipynb
+++ b/Writer/writer.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,12 +154,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define a gru cell\n",
-    "cell = tf.nn.rnn_cell.GRUCell(n_chars)\n",
+    "cell = tf.nn.rnn_cell.LSTMCell(n_chars)\n",
     "\n",
     "# Get gru cell output\n",
     "outputs, states = tf.nn.dynamic_rnn(cell, X, dtype=tf.float32)"
@@ -167,15 +167,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Final output layer\n",
-    "dense = tf.layers.dense(inputs=outputs, units=n_chars, activation=None)\n",
+    "#dense = tf.layers.dense(inputs=outputs, units=n_chars, activation=None)\n",
     "\n",
     "# Class probabilities\n",
-    "probs = tf.nn.softmax(dense)"
+    "#probs = tf.nn.softmax(dense)"
    ]
   },
   {
@@ -187,13 +187,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loss & optimizer\n",
-    "loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(labels=Y, logits=probs))\n",
-    "#loss = tf.reduce_mean(tf.square(outputs - Y))\n",
+    "#loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(labels=Y, logits=probs))\n",
+    "loss = tf.reduce_mean(tf.square(outputs - Y))\n",
     "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
     "\n",
     "# Training\n",
@@ -215,37 +215,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 3.560939\n",
-      "10 3.4405751\n",
-      "20 3.4376385\n",
-      "30 3.437124\n",
-      "40 3.4356363\n",
-      "50 3.441349\n",
-      "60 3.438039\n",
-      "70 3.428631\n",
-      "80 3.4326198\n",
-      "90 3.4306483\n",
-      "100 3.4311433\n",
-      "110 3.4341393\n",
-      "120 3.4286096\n",
-      "130 3.4355512\n",
-      "140 3.4276896\n",
-      "150 3.4371119\n",
-      "160 3.4471247\n",
-      "170 3.4362147\n",
-      "180 3.4350996\n",
-      "190 3.4346445\n",
-      "200 3.4281209\n",
-      "210 3.439109\n",
-      "220 3.443139\n",
-      "230 3.4431329\n"
+      "0 0.031239092\n",
+      "10 0.023259386\n",
+      "20 0.021676524\n",
+      "30 0.020824842\n",
+      "40 0.020563284\n",
+      "50 0.01998036\n",
+      "60 0.019990576\n",
+      "70 0.019611323\n",
+      "80 0.019201703\n",
+      "90 0.019306494\n",
+      "100 0.018365458\n",
+      "110 0.018932305\n",
+      "120 0.01885848\n",
+      "130 0.01912328\n",
+      "140 0.018751925\n",
+      "150 0.018605972\n",
+      "160 0.018472342\n",
+      "170 0.017465238\n",
+      "180 0.018234428\n",
+      "190 0.017806942\n",
+      "200 0.018157022\n",
+      "210 0.018278059\n",
+      "220 0.01760551\n",
+      "230 0.017699609\n",
+      "240 0.017951427\n",
+      "250 0.01727437\n",
+      "260 0.01785046\n",
+      "270 0.017936451\n",
+      "280 0.017850341\n",
+      "290 0.01729503\n",
+      "300 0.017437464\n",
+      "310 0.01714337\n",
+      "320 0.017585019\n",
+      "330 0.01791961\n",
+      "340 0.017491262\n",
+      "350 0.017071426\n",
+      "360 0.017468138\n",
+      "370 0.0174489\n",
+      "380 0.017486533\n",
+      "390 0.017523734\n",
+      "400 0.017611077\n",
+      "410 0.017182712\n",
+      "420 0.016658604\n",
+      "430 0.016616503\n",
+      "440 0.016483497\n",
+      "450 0.016781338\n",
+      "460 0.016957931\n",
+      "470 0.017228471\n",
+      "480 0.017501267\n",
+      "490 0.017206803\n"
      ]
     }
    ],
@@ -280,9 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "these men are peaceable with us; therefore let them dwell in the land, and trade therein; for the land, behold, it is large enough for them; let us take their daughters to us for wives, and let us giv\n"
+     ]
+    }
+   ],
    "source": [
     "seed_chars, _, _, _ = get_data(\"bible_seed.txt\")\n",
     "seed_chars = seed_chars[:time_steps]\n",
@@ -293,11 +327,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./model/\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n"
+     ]
+    }
+   ],
    "source": [
-    "pred_iterations = 10\n",
+    "pred_iterations = 100\n",
     "new_seed_ids = seed_ids.copy()\n",
     "with tf.Session() as sess:\n",
     "    \n",
@@ -315,9 +457,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "these men are peaceable with us; therefore let them dwell in the land, and trade therein; for the land, behold, it is large enough for them; let us take their daughters to us for wives, and let us give the said, and the said, and the said, and the said, and the said, and the said, and the said, and \n"
+     ]
+    }
+   ],
    "source": [
     "final_sentence = \"\".join([id_to_char[id] for id in new_seed_ids])\n",
     "print(final_sentence)"
